Addressed spotbugs issues
Signed-off-by: Laird Nelson <ljnelson@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,9 @@
 
   <dependencies>
 
+
     <!-- Test-scoped dependencies. -->
+
 
     <dependency>
       <groupId>org.jboss.arquillian.testng</groupId>
@@ -135,6 +137,7 @@
       <scope>test</scope>
     </dependency>
 
+
     <!-- Provided-scoped dependencies. -->
 
 
@@ -163,12 +166,13 @@
       <scope>compile</scope>
     </dependency>
 
+
   </dependencies>
 
   <build>
     <pluginManagement>
       <plugins>
-        
+
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
           <configuration>
@@ -180,12 +184,12 @@
             </offlineLinks>
           </configuration>
         </plugin>
-        
+
       </plugins>
     </pluginManagement>
 
     <plugins>
-  
+
       <plugin>
         <groupId>com.github.github</groupId>
         <artifactId>site-maven-plugin</artifactId>
@@ -210,6 +214,9 @@
   </build>
 
   <properties>
+    <ciBadge>${ciUrl}.svg?branch=master</ciBadge>
+    <ciUrl>https://travis-ci.com/microbean/${project.artifactId}</ciUrl>
+    <doctitle>&lt;a href="${project.url}" target="_parent"&gt;&lt;span style="font-family:Lobster, cursive;"&gt;µb&lt;/span&gt; ${project.artifactId}&lt;/a&gt; ${project.version} &lt;a href="${ciUrl}" target="_parent"&gt;&lt;img src="${ciBadge}"&gt;&lt;/a&gt;</doctitle>
     <links>http://docs.jboss.org/cdi/api/1.2/,http://docs.oracle.com/javaee/7/api/</links>
   </properties>
 
