[maven-release-plugin] [skip ci]prepare release v0.2.0

--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,11 @@
                            "http://www.oasis-open.org/docbook/xmlcharent/0.3/iso-num.ent">
 %iso-num;
 ]>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                             http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>microbean-microprofile-config</artifactId>
-  <version>0.2.0-SNAPSHOT</version>
+  <version>0.2.0</version>
 
   <parent>
     <groupId>org.microbean</groupId>
@@ -20,7 +17,7 @@
     <relativePath />
   </parent>
 
-  <name>microBean&trade; MicroProfile Configuration Implementation</name>
+  <name>microBean™ MicroProfile Configuration Implementation</name>
   <description>${project.name}</description>
   <url>http://microbean.github.io/${project.artifactId}</url>
 
@@ -28,11 +25,11 @@
     <connection>scm:git:git@github.com:microbean/${project.artifactId}.git</connection>
     <developerConnection>scm:git:git@github.com:microbean/${project.artifactId}.git</developerConnection>
     <url>https://github.com/microbean/${project.artifactId}/</url>
-    <tag>HEAD</tag>
+    <tag>v0.2.0</tag>
   </scm>
 
   <organization>
-    <name>microBean&trade;</name>
+    <name>microBean™</name>
     <url>http://microbean.systems/</url>
   </organization>
 
