--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>microbean-microprofile-config</artifactId>
-  <version>0.2.1-SNAPSHOT</version>
+  <version>0.3.1-SNAPSHOT</version>
 
   <parent>
     <groupId>org.microbean</groupId>
@@ -199,11 +199,6 @@
       <plugins>
 
         <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.1.1</version>
-        </plugin>
-
-        <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
           <configuration>
             <offlineLinks>
@@ -244,7 +239,7 @@
   </build>
 
   <properties>
-    <links>http://docs.jboss.org/cdi/api/1.2/,http://docs.oracle.com/javaee/7/api/</links>
+    <links>http://docs.jboss.org/cdi/api/1.2/,http://javax-inject.github.io/javax-inject/api/</links>
     <stylesheetfile>css/stylesheet.css</stylesheetfile>
   </properties>
 
@@ -252,6 +247,14 @@
     <plugins>
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>javadoc-no-fork</report>
+              <report>test-javadoc-no-fork</report>
+            </reports>
+          </reportSet>
+        </reportSets>
       </plugin>
     </plugins>
   </reporting>
